<resources>
    <string name="app_name">Warehousenesia</string>
    <string name="home">Home</string>
    <string name="dashboard">Dashboard</string>
    <string name="account">Account</string>
    <string name="cart">Cart</string>
    <string name="customer">Customer</string>
    <string name="order">Order</string>
    <string name="payment">Payment</string>
    <string name="background">Background</string>

    <string name="currency">Currency</string>
    <string name="news">News</string>
    <string name="total_customer">Total Customer</string>
    <string name="total_cart">Total Cart</string>
    <string name="history_order">History Order</string>
    <string name="confirm_payment">Confirm Payment</string>

    <string name="product_name">Product Name</string>
    <string name="description">Description</string>
    <string name="category">Category</string>

    <string name="search">Search Product</string>
    <string name="search_category">Search By Category</string>
    <string name="country">Search By</string>
    <string name="best_product">Best Product</string>
    <string name="best_offers">Best Offers This Week</string>
    <string name="new_arrival">New Arrival Product</string>
    <string name="nama">Kevin Surya Fugusto</string>
    <string name="favorite">My Favorite</string>
    <string name="pilih_transaksi">Select One For The Transaction</string>

    <string name="special_request">Special Request</string>
    <string name="request_product">Request Product</string>
    <string name="choose_image">Choose Image</string>
    <string name="add">Add Request</string>
    <string name="level">Gold</string>
    <string name="countdown">350 Days</string>
    <string name="my_cart">My Cart</string>
    <string name="checkout">Checkout</string>

    <string name="kode_transaksi">Kode Transaksi</string>
    <string name="total_bayar">Total Pembayaran</string>
    <string name="status">Status</string>

    <string name="login">Login</string>
    <string name="login2">Selamat Datang Kembali ! Masuk Untuk Mengakses Warehousenesia.id</string>
    <string name="login3">Tidak Punya Akun ?</string>
    <string name="daftar">Daftar !</string>

    <string name="register">Register</string>
    <string name="register2">Tidak Punya Akun ? Buat Akunmu Disini, Hanya Sebentar</string>
    <string name="register3">Sudah Memiliki Akun ?</string>
    <string name="masuk">Masuk !</string>

    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="phone">Phone Number</string>

    <string name="logout">Logout</string>
    <string name="go">Go</string>

    <string name="nama_lengkap">Full Name</string>

    <string name="make_your_request">Make Your Request !</string>

    <string name="figure">Action Figure Fuwa Aika</string>
    <string name="japan">Japan</string>
    <string name="rp">Rp. 10.000.000</string>
    <string name="mainan">Mainan</string>
    <string name="gram">100 Gram</string>
    <string name="desk">Ini sangat bagus dan langka, masih baru dan ajaib.</string>

    <string name="custom">Custom Your Buy</string>
    <string name="info">Information Product</string>

    <string name="titik2">:</string>
    <string name="total_weight">Total Weight</string>
    <string name="_0">0</string>
    <string name="total_beli">Total Item</string>
    <string name="total_harga">Total Price</string>
    <string name="detail_product">Detail Product</string>
    <string name="shipping_fee">Shipping Fee</string>
    <string name="nama_customer">Customer Name</string>
    <string name="transaction_fee">Transaction Fee 10%</string>
    <string name="total_pay">Total Pay</string>
    <string name="company_name">Company Name</string>

    <string name="choose">Choose Customer</string>
    <string name="pilih_bank">Choose a Bank</string>
    <string name="addCart">Add to Cart</string>

    <string name="detail_paket">Package Details</string>
    <string name="transfer">Transfer</string>
    <string name="norek">No. Rekening</string>
    <string name="atas_nama">Atas Nama</string>
    <string name="detail_order">Order Details</string>
    <string name="harga_paket">Package Price</string>
    <string name="ppn">PPN</string>
    <string name="total">Total</string>
    <string name="cart_customer">Your Customer Cart</string>

    <string name="add_customer">Add Customer</string>
    <string name="edit_customer">Edit Customer</string>

    <string name="no_ktp">No. KTP</string>
    <string name="nomor_npwp">No. NPWP</string>
    <string name="nomor_telepon">Phone Number</string>
    <string name="address">Address</string>
    <string name="kecamatan">Kecamatan</string>
    <string name="kota">Kota</string>
    <string name="provinsi">Provinsi</string>
    <string name="kode_pos">Kode Pos</string>

    <string name="edit">Edit</string>
    <string name="delete">Delete</string>

    <string-array name="country">
        <item>Japan</item>
        <item>Hongkong</item>
        <item>Australia</item>
        <item>Malaysia</item>
        <item>Singapore</item>
        <item>Korea Selatan</item>
        <item>Thailand</item>
    </string-array>

    <string name="pt">©2019 PT. WHNESIA INTERNASIONAL NIAGA ALL RIGHT RESERVED</string>
    <string name="uploadImages">Set your image</string>
    <string name="msg_loading">Loading...</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
