<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".Login"
    android:background="@drawable/backlogin"
    android:gravity="center">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="36sp"
        android:layout_marginBottom="32dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login2"
        android:gravity="center"
        android:textColor="@color/white"
        android:layout_marginBottom="100dp"/>

    <RelativeLayout
        android:id="@+id/head_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginBottom="16dp">

        <ImageView
            android:id="@+id/img_acc"
            android:contentDescription="@string/background"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:src="@drawable/account"
            android:layout_marginEnd="12dp"/>

        <androidx.cardview.widget.CardView
            android:layout_width="245dp"
            android:layout_height="36dp"
            android:layout_toEndOf="@id/img_acc"
            app:cardCornerRadius="8dp">

            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="text"
                android:hint="@string/username"
                android:importantForAutofill="no"
                tools:ignore="LabelFor,RtlSymmetry"
                android:background="@color/white"
                android:textSize="16sp"
                android:paddingStart="8dp"/>

        </androidx.cardview.widget.CardView>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/head_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginBottom="42dp">

    <ImageView
        android:id="@+id/img_pass"
        android:contentDescription="@string/background"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:src="@drawable/password"
        android:layout_marginEnd="12dp"/>

    <androidx.cardview.widget.CardView
        android:layout_width="245dp"
        android:layout_height="36dp"
        android:layout_toEndOf="@id/img_pass"
        app:cardCornerRadius="8dp">

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:importantForAutofill="no"
            tools:ignore="LabelFor,RtlSymmetry"
            android:background="@color/white"
            android:textSize="16sp"
            android:paddingStart="8dp"/>

    </androidx.cardview.widget.CardView>

    </RelativeLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/go_login"
        android:layout_width="100dp"
        android:layout_height="36dp"
        app:cardCornerRadius="8dp"
        android:layout_marginBottom="82dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="18sp"
            android:text="@string/go"
            android:gravity="center"
            android:textColor="@color/black"/>

    </androidx.cardview.widget.CardView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/login3"
        android:textColor="@color/white"/>

    <TextView
        android:id="@+id/daftar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/daftar"
        android:textColor="@color/white"/>

</LinearLayout>