<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".EditProfile"
    android:background="@color/inti">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/img"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_marginTop="36dp"
        android:src="@drawable/account"/>

    <TextView
        android:id="@+id/path"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/inti"
        android:layout_gravity="center" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:cardCornerRadius="12dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="24dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/nama_lengkap"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textNoSuggestions"
                android:importantForAutofill="no"
                android:hint="@string/username"
                android:layout_marginBottom="4dp"/>

            <EditText
                android:id="@+id/no_telpon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:importantForAutofill="no"
                android:hint="@string/phone"
                android:layout_marginBottom="4dp"/>

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:importantForAutofill="no"
                android:hint="@string/email"
                android:layout_marginBottom="4dp"/>

            <EditText
                android:id="@+id/full_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textNoSuggestions"
                android:importantForAutofill="no"
                android:hint="@string/nama_lengkap"
                android:layout_marginBottom="4dp"/>

            <EditText
                android:id="@+id/company_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textNoSuggestions"
                android:importantForAutofill="no"
                android:hint="@string/company_name"
                android:layout_marginBottom="4dp"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/btnUpload"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/white"
        android:text="@string/go"/>

</LinearLayout>