<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RequestProduct"
    android:layout_gravity="center"
    android:padding="16dp">

    <ImageView
        android:id="@+id/img"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:src="@drawable/backgroundreq"/>

    <TextView
        android:id="@+id/path"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="16dp"
        android:text="@string/make_your_request"
        android:textColor="@color/black"
        android:textSize="20sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <EditText
            android:id="@+id/nama_barang"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textNoSuggestions"
            android:hint="@string/product_name"
            android:importantForAutofill="no"
            android:layout_marginBottom="8dp"
            android:textSize="16sp"
            android:paddingStart="8dp"
            tools:ignore="RtlSymmetry" />

        <Button
            android:id="@+id/chooseImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/choose_image"
            android:drawableEnd="@drawable/choose_image"
            android:textSize="16sp"
            android:paddingStart="32dp"
            android:paddingEnd="24dp"
            android:layout_marginBottom="8dp"
            tools:ignore="RtlSymmetry" />

        <EditText
            android:id="@+id/deskripsi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textNoSuggestions"
            android:hint="@string/description"
            android:importantForAutofill="no"
            android:layout_marginBottom="8dp"
            android:textSize="16sp"
            android:paddingStart="8dp"
            tools:ignore="RtlSymmetry" />

        <EditText
            android:id="@+id/kategori"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textNoSuggestions"
            android:hint="@string/category"
            android:importantForAutofill="no"
            android:layout_marginBottom="8dp"
            android:textSize="16sp"
            android:paddingStart="8dp"
            tools:ignore="RtlSymmetry"/>

        <Spinner
            android:id="@+id/country"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:padding="2dp"
            android:entries="@array/country"/>

        <Button
            android:id="@+id/add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add"
            android:padding="8dp"
            android:layout_gravity="center"/>

    </LinearLayout>

</LinearLayout>