<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ConfirmPayment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            app:cardCornerRadius="12dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/pilih_bank"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:layout_margin="8dp"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/bank"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:listitem="@layout/item_bank_payment"
                    android:layout_margin="8dp">

                </androidx.recyclerview.widget.RecyclerView>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <ImageView
            android:id="@+id/preview"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_gravity="center" />

        <TextView
            android:id="@+id/path"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/id_transaksi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_margin="4dp"/>

        <Button
            android:id="@+id/chooseImage"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:text="@string/choose_image"
            android:drawableEnd="@drawable/choose_image"
            android:background="@color/white"
            android:textSize="16sp"
            android:paddingStart="32dp"
            android:paddingEnd="24dp"
            android:layout_margin="16dp"
            tools:ignore="RtlSymmetry" />

        <Button
            android:id="@+id/upload"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:text="Upload"
            android:background="@color/white"
            android:textSize="16sp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:layout_margin="12dp"
            android:gravity="center"
            android:text="@string/pilih_transaksi"/>

        <TableLayout
            android:id="@+id/table"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableRow
                android:id="@+id/head_table"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/inti"
                android:padding="4dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/kode_transaksi"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:textColor="@color/white"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/total_pay"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:textColor="@color/white"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/total_weight"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:textColor="@color/white"/>

            </TableRow>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:listitem="@layout/item_list_payment">

            </androidx.recyclerview.widget.RecyclerView>

        </TableLayout>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>